--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
 .home-content{
     background-image: linear-gradient(109deg, transparent 0%, transparent 5%,rgba(149, 149, 149,0.04) 5%, rgba(149, 149, 149,0.04) 38%,transparent 38%, transparent 100%),linear-gradient(324deg, transparent 0%, transparent 31%,rgba(149, 149, 149,0.04) 31%, rgba(149, 149, 149,0.04) 99%,transparent 99%, transparent 100%),linear-gradient(259deg, transparent 0%, transparent 11%,rgba(149, 149, 149,0.04) 11%, rgba(149, 149, 149,0.04) 57%,transparent 57%, transparent 100%),linear-gradient(221deg, transparent 0%, transparent 5%,rgba(149, 149, 149,0.04) 5%, rgba(149, 149, 149,0.04) 37%,transparent 37%, transparent 100%),linear-gradient(90deg, rgb(0,0,0),rgb(0,0,0));
     background-position: center;
+    background-attachment: fixed;
 }
 
 .sep-link, .home-btn{
@@ -48,10 +49,25 @@ body{
     color: brown;
 }
 
-
+#image{
+    margin-left: 200px;
+}
+#proRows{
+    margin-bottom: 60px;
+}
 
 
 /* ABOUT STYLING */
+.red{
+    color: brown;
+}
+hr{
+    rotate: 90deg;
+}
+
+
+
+
 
 /* projects Styling*/
 #img3{
@@ -59,4 +75,11 @@ margin-top:2%;
 }
 #img4{
     margin-top: 2%;
+}
+#img1{
+/* margin-right: 1%; */
+
+}
+#img2{
+    /* margin-right: 10%; */
 }
