--- a/style.css
+++ b/style.css
@@ -45,9 +45,21 @@ body{
 .sep-link, .home-btn{
     background-color: brown;
 }
-.home-hdr{
+.typed{
     color: brown;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 0;
+    animation: typing;
+    animation-duration: 1.5s;
+    animation-timing-function: steps(30, end);
+    animation-fill-mode: forwards;
 }
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  } */
+
 
 #image{
     margin-left: 200px;
@@ -55,7 +67,6 @@ body{
 #proRows{
     margin-bottom: 60px;
 }
-
 
 /* ABOUT STYLING */
 .red{
@@ -83,3 +94,121 @@ margin-top:2%;
 #img2{
     /* margin-right: 10%; */
 }
+
+
+
+/* contact */
+.contact{
+    width: 50%;
+    
+}
+h1 ,h2{
+    color: brown;
+}
+:06
+.info{
+    margin: 20%;
+}
+body{
+    background-color: black;
+    color: white;
+    /* overflow-x: hidden; */
+}
+/* .nav-item{
+    margin-left: 5%;
+} */
+.nav-link{
+    color: white;
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+    text-decoration: none;
+}
+.nav-link:hover{
+    color: red;
+    background-color: black;
+}
+.card{
+    width: 50px;
+    height: 50%;
+}
+/* NAVBAR */
+/* HOME STYLING */
+.home-content{
+    background-image: linear-gradient(109deg, transparent 0%, transparent 5%,rgba(149, 149, 149,0.04) 5%, rgba(149, 149, 149,0.04) 38%,transparent 38%, transparent 100%),linear-gradient(324deg, transparent 0%, transparent 31%,rgba(149, 149, 149,0.04) 31%, rgba(149, 149, 149,0.04) 99%,transparent 99%, transparent 100%),linear-gradient(259deg, transparent 0%, transparent 11%,rgba(149, 149, 149,0.04) 11%, rgba(149, 149, 149,0.04) 57%,transparent 57%, transparent 100%),linear-gradient(221deg, transparent 0%, transparent 5%,rgba(149, 149, 149,0.04) 5%, rgba(149, 149, 149,0.04) 37%,transparent 37%, transparent 100%),linear-gradient(90deg, rgb(0,0,0),rgb(0,0,0));
+    background-position: center;
+    background-attachment: fixed;
+}
+.sep-link, .home-btn{
+    background-color: brown;
+}
+.home-hdr{
+    color: brown;
+}
+#image{
+    margin-left: 200px;
+}
+#proRows{
+    margin-bottom: 60px;
+}
+/* ABOUT STYLING */
+.red{
+    color: brown;
+}
+hr{
+    rotate: 90deg;
+}
+/* projects Styling*/
+#img3{
+margin-top:2%;
+}
+#img4{
+    margin-top: 2%;
+}
+#img1{
+/* margin-right: 1%; */
+}
+#img2{
+    /* margin-right: 10%; */
+}
+/* resume */
+.card-text{
+    color: white;
+}
+.card-title{
+    color: white;
+}
+/* contact */
+.contact {
+    padding: 20px;
+    margin-left: 35%;
+    /* background-color: #F7F7F7; */
+  }
+  /* .container {
+    max-width: 600px;
+    margin: 0 auto;
+  } */
+  .form-label {
+    font-weight: bold;
+  }
+  .form-control {
+    width: 50%;
+    padding: 10px;
+    margin-bottom: 15px;
+    /* border: 1px solid #ccc; */
+    border-radius: 5px;
+  }
+  textarea.form-control {
+    height: 100px;
+  }
+  .btn-primary {
+    background-color: #007BFF;
+    /* color: #fff; */
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .btn-primary:hover {
+    background-color: #0056B3;
+  }
